📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -11310,5 +11310,101 @@
         "published": "Fri, 12 Dec 2025 18:58:43 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46247415\">Comments</a>"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/12/with-ios-26-2-apple-lets-you-roll-back-liquid-glass-again-this-time-on-the-lock-screen/",
+        "title": "With iOS 26.2, Apple lets you roll back Liquid Glass again \u2014 this time on the Lock Screen",
+        "link": "https://techcrunch.com/2025/12/12/with-ios-26-2-apple-lets-you-roll-back-liquid-glass-again-this-time-on-the-lock-screen/",
+        "published": "Fri, 12 Dec 2025 20:45:00 +0000",
+        "source": "TechCrunch",
+        "summary": "Your iPhone clock doesn't have to be so \"glassy\" anymore, thanks to a new Apple software update."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/12/google-and-apple-roll-out-emergency-security-updates-after-zero-day-attacks/",
+        "title": "Google and Apple roll out emergency security updates after zero-day attacks",
+        "link": "https://techcrunch.com/2025/12/12/google-and-apple-roll-out-emergency-security-updates-after-zero-day-attacks/",
+        "published": "Fri, 12 Dec 2025 20:31:36 +0000",
+        "source": "TechCrunch",
+        "summary": "Apple released patches for all of its flagship devices to fix security flaws under attack. Google also updated Chrome to remediate one vulnerability exploited in the attacks."
+    },
+    {
+        "id": "https://www.theverge.com/gadgets/843079/best-stocking-stuffers-christmas-ideas-2025",
+        "title": "We found 70 stocking stuffers under $100 that are actually useful",
+        "link": "https://www.theverge.com/gadgets/843079/best-stocking-stuffers-christmas-ideas-2025",
+        "published": "2025-12-12T15:57:56-05:00",
+        "source": "The Verge",
+        "summary": "Let's face it, it's easy to fixate on the big gifts that crowd around the Christmas tree. However, we'd argue that the true treasures are the small, useful, and thoughtful gifts tucked within stockings. That's why, for this guide, we've pooled together a bunch of tried-and-tested gadgets and goods to help bolster someone's everyday carry [&#8230;]"
+    },
+    {
+        "id": "https://gizmodo.com/reddit-sues-australia-over-teen-social-media-ban-as-other-nations-consider-similar-laws-2000699275",
+        "title": "Reddit Sues Australia Over Teen Social Media Ban as Other Nations Consider Similar Laws",
+        "link": "https://gizmodo.com/reddit-sues-australia-over-teen-social-media-ban-as-other-nations-consider-similar-laws-2000699275",
+        "published": "Fri, 12 Dec 2025 21:00:00 +0000",
+        "source": "Gizmodo",
+        "summary": "The company says the law violates teens\u2019 political speech rights as other countries consider similar restrictions."
+    },
+    {
+        "id": "https://gizmodo.com/mind-bending-einstein-cross-reveals-ultrabright-supernova-from-an-unthinkable-distance-2000699270",
+        "title": "Mind-Bending \u2018Einstein Cross\u2019 Reveals Ultrabright Supernova From an Unthinkable Distance",
+        "link": "https://gizmodo.com/mind-bending-einstein-cross-reveals-ultrabright-supernova-from-an-unthinkable-distance-2000699270",
+        "published": "Fri, 12 Dec 2025 20:55:51 +0000",
+        "source": "Gizmodo",
+        "summary": "For the first time, astronomers have captured the brilliance of a superluminous supernova via gravitational lensing."
+    },
+    {
+        "id": "https://gizmodo.com/star-wars-fate-of-the-old-republic-canon-legends-kotor-2000699066",
+        "title": "\u2018Fate of the Old Republic\u2019 Puts \u2018Star Wars\u2019 at an Incredible Crossroads",
+        "link": "https://gizmodo.com/star-wars-fate-of-the-old-republic-canon-legends-kotor-2000699066",
+        "published": "Fri, 12 Dec 2025 20:20:53 +0000",
+        "source": "Gizmodo",
+        "summary": "Which way, Jedi? Either will change the relationship between 'Star Wars' and its past forever."
+    },
+    {
+        "id": "https://mashable.com/video/the-pitt-season-2-opening-scene",
+        "title": "The Pitt Season 2s first scene is out, and Im already concerned for Dr. Robby",
+        "link": "https://mashable.com/video/the-pitt-season-2-opening-scene",
+        "published": "Fri, 12 Dec 2025 19:37:08 +0000",
+        "source": "Mashable",
+        "summary": "HBO Max has released the first 90 seconds of \"The Pitt\" Season 2, starring Noah Wyle."
+    },
+    {
+        "id": "https://www.zdnet.com/article/meta-ray-ban-best-buy-deal/",
+        "title": "Best Buy is selling Meta Ray-Ban glasses for $70 off - these sizes and frames included",
+        "link": "https://www.zdnet.com/article/meta-ray-ban-best-buy-deal/",
+        "published": "Fri, 12 Dec 2025 21:07:00 GMT",
+        "source": "Latest news",
+        "summary": "The Meta Ray-Ban smart glasses are on sale during Best Buy's 3-day event, just in time to upgrade your eyewear."
+    },
+    {
+        "id": "https://www.zdnet.com/article/i-tested-a-smart-pet-door-and-its-the-smart-home-gadget-i-didnt-know-i-needed/",
+        "title": "I tested a smart pet door, and it's the smart home gadget I didn't know I needed",
+        "link": "https://www.zdnet.com/article/i-tested-a-smart-pet-door-and-its-the-smart-home-gadget-i-didnt-know-i-needed/",
+        "published": "Fri, 12 Dec 2025 20:56:00 GMT",
+        "source": "Latest news",
+        "summary": "Busy dog owners, rejoice."
+    },
+    {
+        "id": "https://www.zdnet.com/article/oura-ring-4-ceramic-review/",
+        "title": "The Oura Ring 4 Ceramic is a status symbol and a health tracker all in one",
+        "link": "https://www.zdnet.com/article/oura-ring-4-ceramic-review/",
+        "published": "Fri, 12 Dec 2025 20:50:34 GMT",
+        "source": "Latest news",
+        "summary": "The smart ring is $75 off at Best Buy right now. Here's why it's a good buy."
+    },
+    {
+        "id": "https://invoice.secvuln.info/",
+        "title": "Security issues with electronic invoices",
+        "link": "https://invoice.secvuln.info/",
+        "published": "Fri, 12 Dec 2025 20:28:41 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46248470\">Comments</a>"
+    },
+    {
+        "id": "https://unifoundry.com/unifont/index.html",
+        "title": "GNU Unifont",
+        "link": "https://unifoundry.com/unifont/index.html",
+        "published": "Fri, 12 Dec 2025 20:57:34 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46248859\">Comments</a>"
     }
 ]
