📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -11406,5 +11406,109 @@
         "published": "Fri, 12 Dec 2025 20:57:34 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46248859\">Comments</a>"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/12/riding-onboard-with-rivians-race-to-autonomy/",
+        "title": "Riding onboard with Rivian\u2019s race to autonomy",
+        "link": "https://techcrunch.com/2025/12/12/riding-onboard-with-rivians-race-to-autonomy/",
+        "published": "Fri, 12 Dec 2025 21:44:50 +0000",
+        "source": "TechCrunch",
+        "summary": "Rivian demonstrated the progress it's made, and in the process showed just how far it still has to go to make its cars autonomous."
+    },
+    {
+        "id": "https://www.theverge.com/entertainment/842881/resurrection-bi-gan-interview-tracking-shot",
+        "title": "The long shot",
+        "link": "https://www.theverge.com/entertainment/842881/resurrection-bi-gan-interview-tracking-shot",
+        "published": "2025-12-12T16:14:21-05:00",
+        "source": "The Verge",
+        "summary": "The long take, the unbroken tracking shot, \"the oner\" - whatever you want to call it, filmmakers agree that it's one of the most difficult technical achievements in cinema. It's a feat of creativity, but also great coordination and choreography when a single, tiny mistake can ruin a shot. Some famous examples: the casino scene [&#8230;]"
+    },
+    {
+        "id": "https://arstechnica.com/gaming/2025/12/reminder-donate-to-win-swag-in-our-annual-charity-drive-sweepstakes-17/",
+        "title": "Reminder: Donate to win swag in our annual Charity Drive sweepstakes",
+        "link": "https://arstechnica.com/gaming/2025/12/reminder-donate-to-win-swag-in-our-annual-charity-drive-sweepstakes-17/",
+        "published": "Fri, 12 Dec 2025 21:35:44 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Help raise a charity haul that's already past $11,000 in just a couple of days."
+    },
+    {
+        "id": "https://arstechnica.com/google/2025/12/google-translate-learns-slang-and-idioms-expands-live-translation-beyond-pixel-buds/",
+        "title": "Google Translate expands live translation to all earbuds on Android",
+        "link": "https://arstechnica.com/google/2025/12/google-translate-learns-slang-and-idioms-expands-live-translation-beyond-pixel-buds/",
+        "published": "Fri, 12 Dec 2025 20:44:35 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Expanded live translation will come to iOS in the coming months."
+    },
+    {
+        "id": "https://www.engadget.com/entertainment/streaming/amazon-pulls-its-bad-ai-video-recaps-after-fallout-fallout-220358758.html?src=rss",
+        "title": "Amazon pulls its bad AI video recaps after Fallout fallout",
+        "link": "https://www.engadget.com/entertainment/streaming/amazon-pulls-its-bad-ai-video-recaps-after-fallout-fallout-220358758.html?src=rss",
+        "published": "Fri, 12 Dec 2025 22:03:58 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Amazon has responded to viewers catching errors in its AI-generated season recaps by apparently pulling them from Prime Video. The company <a class=\"link\" href=\"https://www.engadget.com/entertainment/streaming/amazon-adds-ai-generated-video-recaps-for-select-prime-video-shows-190758346.html\" target=\"_blank\">announced its new Video Recaps feature</a> in November as a way to make it easier to jump into a new season of a show, but the feature had issues: <a class=\"link\" href=\"https://www.engadge"
+    },
+    {
+        "id": "https://gizmodo.com/blue-origins-next-mission-is-helping-redefine-who-gets-to-go-to-space-2000699285",
+        "title": "Blue Origin\u2019s Next Mission Is Helping Redefine Who Gets to Go to Space",
+        "link": "https://gizmodo.com/blue-origins-next-mission-is-helping-redefine-who-gets-to-go-to-space-2000699285",
+        "published": "Fri, 12 Dec 2025 21:25:07 +0000",
+        "source": "Gizmodo",
+        "summary": "Should the mission proceed as planned, it will mark a major step forward for accessibility in spaceflight\u2014sending the first wheelchair user beyond Earth."
+    },
+    {
+        "id": "https://gizmodo.com/fallout-ai-recap-amazon-prime-video-anime-2000699210",
+        "title": "Amazon Pulls AI Recap Video After \u2018Fallout\u2019 Mess",
+        "link": "https://gizmodo.com/fallout-ai-recap-amazon-prime-video-anime-2000699210",
+        "published": "Fri, 12 Dec 2025 21:20:51 +0000",
+        "source": "Gizmodo",
+        "summary": "Amazon is being forced to repeatedly learn a lesson: use AI slop, and get people yelling at you until you don't."
+    },
+    {
+        "id": "https://gizmodo.com/wall-street-sphincters-tighten-as-oracle-delays-its-openai-data-center-buildout-2000699248",
+        "title": "Wall Street Sphincters Tighten as Oracle Delays Its OpenAI Data Center Buildout",
+        "link": "https://gizmodo.com/wall-street-sphincters-tighten-as-oracle-delays-its-openai-data-center-buildout-2000699248",
+        "published": "Fri, 12 Dec 2025 21:10:38 +0000",
+        "source": "Gizmodo",
+        "summary": "When the bubble pops, you can't say there weren't signs."
+    },
+    {
+        "id": "https://mashable.com/article/google-live-translate-headphones-ios-android",
+        "title": "Google is bringing Gemini live translation to your headphones (unless youre using an iPhone, of course)",
+        "link": "https://mashable.com/article/google-live-translate-headphones-ios-android",
+        "published": "Fri, 12 Dec 2025 21:26:26 +0000",
+        "source": "Mashable",
+        "summary": "Google's Gemini-powered live language translation is now supported by any headphones you've got, but not any phone you've got yet."
+    },
+    {
+        "id": "https://www.zdnet.com/article/im-a-shopping-editor-and-this-is-the-no-1-reason-i-prefer-best-buy-over-amazon-for-tech-purchases/",
+        "title": "I'm a shopping editor, and this is the No. 1 reason I prefer Best Buy over Amazon for tech purchases",
+        "link": "https://www.zdnet.com/article/im-a-shopping-editor-and-this-is-the-no-1-reason-i-prefer-best-buy-over-amazon-for-tech-purchases/",
+        "published": "Fri, 12 Dec 2025 21:23:48 GMT",
+        "source": "Latest news",
+        "summary": "Jeff Bezos doesn't care about you like the Geek Squad does. Best Buy just price-matched my Cyber Monday purchase in under 5 minutes."
+    },
+    {
+        "id": "https://developer.apple.com/documentation/macos-release-notes/macos-26_2-release-notes#RDMA-over-Thunderbolt",
+        "title": "macOS 26.2 enables fast AI clusters with RDMA over Thunderbolt",
+        "link": "https://developer.apple.com/documentation/macos-release-notes/macos-26_2-release-notes#RDMA-over-Thunderbolt",
+        "published": "Fri, 12 Dec 2025 20:41:38 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46248644\">Comments</a>"
+    },
+    {
+        "id": "https://ratsplaydoom.com/",
+        "title": "Rats Play Doom",
+        "link": "https://ratsplaydoom.com/",
+        "published": "Fri, 12 Dec 2025 20:15:58 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46248323\">Comments</a>"
+    },
+    {
+        "id": "https://www.whitehouse.gov/presidential-actions/2025/12/eliminating-state-law-obstruction-of-national-artificial-intelligence-policy/",
+        "title": "Ensuring a National Policy Framework for Artificial Intelligence",
+        "link": "https://www.whitehouse.gov/presidential-actions/2025/12/eliminating-state-law-obstruction-of-national-artificial-intelligence-policy/",
+        "published": "Thu, 11 Dec 2025 23:56:10 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46239076\">Comments</a>"
     }
 ]
