📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -11590,5 +11590,69 @@
         "published": "Fri, 12 Dec 2025 22:02:14 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46249538\">Comments</a>"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/12/tech-layoffs-2025-list/",
+        "title": "A comprehensive list of 2025 tech layoffs",
+        "link": "https://techcrunch.com/2025/12/12/tech-layoffs-2025-list/",
+        "published": "Sat, 13 Dec 2025 00:11:09 +0000",
+        "source": "TechCrunch",
+        "summary": "A complete list of all the known layoffs in tech, from Big Tech to startups, broken down by month throughout 2025."
+    },
+    {
+        "id": "https://www.theverge.com/tech/809421/holiday-gift-guide-2025",
+        "title": "The Verge\u2019s 2025 holiday gift guide",
+        "link": "https://www.theverge.com/tech/809421/holiday-gift-guide-2025",
+        "published": "2025-12-12T19:08:39-05:00",
+        "source": "The Verge",
+        "summary": "The holidays have a way of sneaking up on us. One minute you're trick-or-treating with your kids, and the next you're panic shopping in a Buc-ee's gift aisle. But it doesn't have to be that way. With the right cheat sheet, you can keep the holiday spirit high and stress levels low. Fortunately, we did [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/23133103/best-instant-cameras-fujifilm-polaroid-kodak",
+        "title": "The best instant cameras you can buy right now",
+        "link": "https://www.theverge.com/23133103/best-instant-cameras-fujifilm-polaroid-kodak",
+        "published": "2025-12-12T18:31:40-05:00",
+        "source": "The Verge",
+        "summary": "Even with the ability to take excellent photos with our phones and instantly share them across the world, there\u2019s something magical about the old-school instant camera. With just a click of a button, you can capture a moment in a photo that you can see and touch almost immediately. Images captured by an instant camera [&#8230;]"
+    },
+    {
+        "id": "https://www.engadget.com/entertainment/streaming/wwe-saturday-nights-main-event-how-to-watch-john-cenas-final-match-for-free-235537779.html?src=rss",
+        "title": "WWE Saturday Night's Main Event: How to watch John Cena's final match for free",
+        "link": "https://www.engadget.com/entertainment/streaming/wwe-saturday-nights-main-event-how-to-watch-john-cenas-final-match-for-free-235537779.html?src=rss",
+        "published": "Fri, 12 Dec 2025 23:55:37 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p><a href=\"https://sports.yahoo.com/wrestling/article/john-cenas-final-year-in-numbers-the-stats-that-defined-his-last-wwe-run-160002870.html\">John Cena</a> began his WWE retirement tour back in January, and it's coming to an end this weekend when the wrestling legend headlines <em>WWE Saturday Night's Main Event</em>. For the last fight of his career, Cena has been matched up with &quot;The Ring General&quot; Gunther on the night's fight card, which also features matches between Cody Rhodes an"
+    },
+    {
+        "id": "https://gizmodo.com/jim-carrey-wanted-to-become-the-grinch-at-all-costs-2000699247",
+        "title": "Jim Carrey Wanted to Become the Grinch at All Costs",
+        "link": "https://gizmodo.com/jim-carrey-wanted-to-become-the-grinch-at-all-costs-2000699247",
+        "published": "Fri, 12 Dec 2025 23:20:24 +0000",
+        "source": "Gizmodo",
+        "summary": "The Ron Howard movie turns 25 this year, and its star recalls the torture he went through to portray Dr. Seuss' Christmas-loathing character."
+    },
+    {
+        "id": "https://mashable.com/article/apple-launches-os-updates-macos-ipados-ios-26-2",
+        "title": "Apple releases iOS 26.2, and new Edge Light tool. Heres how to try all the OS updates.",
+        "link": "https://mashable.com/article/apple-launches-os-updates-macos-ipados-ios-26-2",
+        "published": "Sat, 13 Dec 2025 00:02:39 +0000",
+        "source": "Mashable",
+        "summary": "The latest Apple OS updates started rolling out to users on Dec. 12. Users can now update to iOS 26.2, macOS 26.2, iPadOS 26.2, and watchOS 26.2."
+    },
+    {
+        "id": "https://mashable.com/article/google-disco-ai-browser-tabs-app",
+        "title": "Say hello to Google\u2019s \u2018Disco\u2019, an AI tool that makes web apps from browser tabs",
+        "link": "https://mashable.com/article/google-disco-ai-browser-tabs-app",
+        "published": "Fri, 12 Dec 2025 23:22:40 +0000",
+        "source": "Mashable",
+        "summary": "Say hello to Google\u2019s \u2018Disco\u2019, an AI tool that makes web apps from browser tabs."
+    },
+    {
+        "id": "https://simonwillison.net/2025/Dec/12/openai-skills/",
+        "title": "OpenAI are quietly adopting skills, now available in ChatGPT and Codex CLI",
+        "link": "https://simonwillison.net/2025/Dec/12/openai-skills/",
+        "published": "Fri, 12 Dec 2025 23:30:19 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46250332\">Comments</a>"
     }
 ]
