📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -11654,5 +11654,21 @@
         "published": "Fri, 12 Dec 2025 23:30:19 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46250332\">Comments</a>"
+    },
+    {
+        "id": "https://mashable.com/article/wake-up-dead-man-a-knives-out-mystery-ending-explained-who-killed-wicks",
+        "title": "That twisty Wake Up Dead Man ending, explained",
+        "link": "https://mashable.com/article/wake-up-dead-man-a-knives-out-mystery-ending-explained-who-killed-wicks",
+        "published": "Sat, 13 Dec 2025 01:00:00 +0000",
+        "source": "Mashable",
+        "summary": "How does \"Wake Up Dead Man: A Knives Out Mystery\" pull off its locked-room murder? Let's break it down."
+    },
+    {
+        "id": "https://mashable.com/article/openai-disney-no",
+        "title": "Even 1,001 Disney deals may not save OpenAI",
+        "link": "https://mashable.com/article/openai-disney-no",
+        "published": "Sat, 13 Dec 2025 00:38:05 +0000",
+        "source": "Mashable",
+        "summary": "OpenAI is in trouble, and its licensing deal with Disney ultimately isn't good for anyone except Disney CEO Bob Iger."
     }
 ]
