📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -11670,5 +11670,37 @@
         "published": "Sat, 13 Dec 2025 00:38:05 +0000",
         "source": "Mashable",
         "summary": "OpenAI is in trouble, and its licensing deal with Disney ultimately isn't good for anyone except Disney CEO Bob Iger."
+    },
+    {
+        "id": "https://mashable.com/article/pips-nyt-games-hints-answers-easy-medium-hard-december-13",
+        "title": "NYT Pips hints, answers for December 13, 2025",
+        "link": "https://mashable.com/article/pips-nyt-games-hints-answers-easy-medium-hard-december-13",
+        "published": "Sat, 13 Dec 2025 03:00:00 +0000",
+        "source": "Mashable",
+        "summary": "The New York Times' latest game, Pips, brings domino fun to your desktop. How to play Pips as well as hints in case you get stuck."
+    },
+    {
+        "id": "https://mashable.com/article/nyt-connections-hint-answer-today-december-13-2025",
+        "title": "NYT Connections hints today: Clues, answers for December 13, 2025",
+        "link": "https://mashable.com/article/nyt-connections-hint-answer-today-december-13-2025",
+        "published": "Sat, 13 Dec 2025 03:00:00 +0000",
+        "source": "Mashable",
+        "summary": "Connections is a New York Times word game that's all about finding the \"common threads between words.\" How to solve the puzzle."
+    },
+    {
+        "id": "https://mashable.com/article/strands-nyt-hint-december-13-2025",
+        "title": "NYT Strands hints, answers for December 13, 2025",
+        "link": "https://mashable.com/article/strands-nyt-hint-december-13-2025",
+        "published": "Sat, 13 Dec 2025 03:00:00 +0000",
+        "source": "Mashable",
+        "summary": "The NYT Strands hints and answers you need to make the most of your puzzling experience."
+    },
+    {
+        "id": "https://mashable.com/article/wordle-today-answer-december-13-2025",
+        "title": "Wordle today: Answer, hints for December 13, 2025",
+        "link": "https://mashable.com/article/wordle-today-answer-december-13-2025",
+        "published": "Sat, 13 Dec 2025 03:00:00 +0000",
+        "source": "Mashable",
+        "summary": "Here's the answer for \"Wordle\" #1637 on December 13 as well as a few hints, tips, and clues to help you solve it yourself."
     }
 ]
