📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -11702,5 +11702,21 @@
         "published": "Sat, 13 Dec 2025 03:00:00 +0000",
         "source": "Mashable",
         "summary": "Here's the answer for \"Wordle\" #1637 on December 13 as well as a few hints, tips, and clues to help you solve it yourself."
+    },
+    {
+        "id": "https://github.com/sgharlow/claude-code-recipes",
+        "title": "Show HN: Claude Code Recipes for Knowledge Workers (Open Source)",
+        "link": "https://github.com/sgharlow/claude-code-recipes",
+        "published": "Sat, 13 Dec 2025 03:57:58 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46251852\">Comments</a>"
+    },
+    {
+        "id": "https://bfswa.substack.com/p/poor-johnny-still-wont-encrypt",
+        "title": "Poor Johnny still won't encrypt",
+        "link": "https://bfswa.substack.com/p/poor-johnny-still-wont-encrypt",
+        "published": "Sat, 13 Dec 2025 04:21:24 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46251952\">Comments</a>"
     }
 ]
