📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -11718,5 +11718,37 @@
         "published": "Sat, 13 Dec 2025 04:21:24 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46251952\">Comments</a>"
+    },
+    {
+        "id": "https://mashable.com/article/flamengo-pyramids-fc-fifa-intercontinental-cup-2025-live-stream-for-free",
+        "title": "How to watch Flamengo vs. Pyramids FC online for free",
+        "link": "https://mashable.com/article/flamengo-pyramids-fc-fifa-intercontinental-cup-2025-live-stream-for-free",
+        "published": "Sat, 13 Dec 2025 05:00:00 +0000",
+        "source": "Mashable",
+        "summary": "How to watch FIFA Intercontinental Cup for free. Live stream Flamengo vs. Pyramids FC in the FIFA Intercontinental Cup for free."
+    },
+    {
+        "id": "https://mashable.com/article/hurdle-hints-answers-december-13-2025",
+        "title": "Hurdle hints and answers for December 13, 2025",
+        "link": "https://mashable.com/article/hurdle-hints-answers-december-13-2025",
+        "published": "Sat, 13 Dec 2025 05:00:00 +0000",
+        "source": "Mashable",
+        "summary": "Hints and answers to today's Hurdle all in one place."
+    },
+    {
+        "id": "https://mashable.com/article/moon-phase-today-dec-13",
+        "title": "Moon phase today: What the moon will look like on December 13",
+        "link": "https://mashable.com/article/moon-phase-today-dec-13",
+        "published": "Sat, 13 Dec 2025 05:00:00 +0000",
+        "source": "Mashable",
+        "summary": "See the moon phase expected for December 13, 2025 as well as when the next full moon is expected."
+    },
+    {
+        "id": "https://gwern.net/doc/technology/2008-sower.pdf",
+        "title": "Ferrari's Formula 1 Handovers: Handovers from Surgery to Intensive Care 2008;pdf",
+        "link": "https://gwern.net/doc/technology/2008-sower.pdf",
+        "published": "Sat, 06 Dec 2025 19:21:50 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46175888\">Comments</a>"
     }
 ]
