📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -11750,5 +11750,21 @@
         "published": "Sat, 06 Dec 2025 19:21:50 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46175888\">Comments</a>"
+    },
+    {
+        "id": "https://hey.paris/posts/appleid/",
+        "title": "Apple has locked my Apple ID, and I have no recourse. A plea for help",
+        "link": "https://hey.paris/posts/appleid/",
+        "published": "Sat, 13 Dec 2025 04:55:59 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46252114\">Comments</a>"
+    },
+    {
+        "id": "https://www.ghibli.jp/info/013772/",
+        "title": "1300 Still Images from the Animated Films of Hayao Miyazaki's Studio Ghibli (2023)",
+        "link": "https://www.ghibli.jp/info/013772/",
+        "published": "Sat, 13 Dec 2025 02:56:49 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46251582\">Comments</a>"
     }
 ]
