--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -11766,5 +11766,13 @@
         "published": "Sat, 13 Dec 2025 02:56:49 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46251582\">Comments</a>"
+    },
+    {
+        "id": "https://eavan.blog/posts/beautiful-sandpiles.html",
+        "title": "Beautiful Abelian Sandpiles",
+        "link": "https://eavan.blog/posts/beautiful-sandpiles.html",
+        "published": "Tue, 09 Dec 2025 20:16:15 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46210044\">Comments</a>"
     }
 ]
