📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -11774,5 +11774,21 @@
         "published": "Tue, 09 Dec 2025 20:16:15 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46210044\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/qualify-for-this-oneplus-pad-3-bundle/",
+        "title": "You can save over $250 on this OnePlus Pad 3 bundle - here's how to qualify",
+        "link": "https://www.zdnet.com/article/qualify-for-this-oneplus-pad-3-bundle/",
+        "published": "Sat, 13 Dec 2025 09:00:36 GMT",
+        "source": "Latest news",
+        "summary": "OnePlus' latest flagship is one of the year's most compelling Android tablets. As part of a new deal, you'll also receive two free gifts."
+    },
+    {
+        "id": "https://www.zdnet.com/article/how-to-turn-off-windows-security-safely/",
+        "title": "Should you ever turn off Windows Security? It's tricky, but here's my rule of thumb",
+        "link": "https://www.zdnet.com/article/how-to-turn-off-windows-security-safely/",
+        "published": "Sat, 13 Dec 2025 08:30:42 GMT",
+        "source": "Latest news",
+        "summary": "There are some situations where you might want to temporarily disable Windows' built-in security tool. I'll show you how to do it safely."
     }
 ]
